--- a/cybrBSA2.Rmd
+++ b/cybrBSA2.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "cybrBSA2"
 author: "Cassandra Buzby"
-date: "12/28/2022"
+date: "October 2024"
 output: html_document
 ---
 
@@ -9,6 +9,10 @@ Making the BSA scripts more efficient with functions to actually pipe with dplyr
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+
+#library(devtools)
+#install_github("cbuzby/cybrBSA")
+library(cybrBSA)
 
 #Load packages
 library(ggplot2)
@@ -22,31 +26,14 @@ library(foreach)
 library(doParallel)
 library(RColorBrewer)
 
-library(cybrBSA)
 
 ggplot2::theme_set(theme_light())
-
-glmfixed <- function(HOO, HOW, HWO, HWW, LOO, LOW, LWO, LWW){
-  
-  combineddata <- data.frame(Bulk = factor(c("H", "H","H", "H", "L", "L","L", "L")),
-                           Parent = factor(c("O", "O", "W", "W", "O", "O", "W", "W")),
-                           Allele = factor(c("O", "W", "O", "W","O", "W", "O", "W")),
-                           Reads = c(HOO, HOW, HWO, HWW, LOO, LOW, LWO, LWW))
-
-  b <- glm(Allele ~ Bulk*Parent, weights = Reads, family = binomial, 
-              data = combineddata)
-
-  summary(b)$coefficients[
-    ((length(summary(b)$coefficients)/4)*2+1):
-      ((length(summary(b)$coefficients)/4)*3)]
-}
 
 ```
 
 # Visualized Data for Github
 
 ```{r}
-setwd("C:/Users/Cassandra/Documents/GitHub/CSS_Paper/Input")
 mydatatotest = "AllCuSO4.SortedCat.vcf.output.table"
 
 cybrInputGATKTable(mydatatotest) %>% mutate(Coverage = as.numeric(AD.REF) + as.numeric(AD.ALT)) %>%
