Final updates to rmd

--- a/cybrBSA2.Rmd
+++ b/cybrBSA2.Rmd
@@ -25,7 +25,7 @@ library(dplyr)
 library(foreach)
 library(doParallel)
 library(RColorBrewer)
-
+library(circlize)
 
 ggplot2::theme_set(theme_light())
 
